# hdrmerge

./: .gitignore  .travis.yml  AUTHORS.md  AboutDialog.cpp  AboutDialog.h  AboutDialog.hpp  Array2D.hpp  Bitmap.cpp  Bitmap.hpp  BoxBlur.cpp  BoxBlur.hpp  CFAPattern.hpp  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Demosaic.cpp  Demosaic.hpp  DngFloatWriter.cpp  DngFloatWriter.hpp  DngPropertiesDialog.cpp  DngPropertiesDialog.hpp  DngWriter.cpp  DngWriter.hpp  DraggableScrollArea.cpp  DraggableScrollArea.h  DraggableScrollArea.hpp  EditableMask.cpp  EditableMask.hpp  ExifTransfer.cpp  ExifTransfer.hpp  Exposure.cpp  Exposure.h  HdrMergeMainWindow.cpp  HdrMergeMainWindow.h  Histogram.hpp  INSTALL.md  INSTALL.mingw  INSTALL_mingw.md  Image.cpp  Image.hpp  (+70 more)
.kdev4/: hdrmerge.kdev4
_includes/: foot.html  head.html  navbars.html  post_list.html
_layouts/: default.html  post.html
_posts/: 2014-05-24-building-hdrmerge.md  2014-05-24-using-hdrmerge.md  2014-05-24-what-is-hdrmerge.md  2014-07-11-user-manual.md  compile.md  download.md
appimage/: appimage.sh
cmake/: FindAlglib.cmake  FindExiv2.cmake  FindLibRaw.cmake  FindQt5Transitional.cmake  Windows32.cmake  Windows64.cmake
css/: hc.css
data/: hdrmerge_es.ts  resources.qrc  setup.nsi  translations.qrc.in  winres.rc
images/: icon.icns
scripts/: align_linear  tonemap
src/: AboutDialog.cpp  AboutDialog.hpp  Array2D.hpp  Bitmap.hpp  CFAPattern.hpp  DngFloatWriter.cpp  DngPropertiesDialog.hpp  DraggableScrollArea.cpp  DraggableScrollArea.hpp  EditableMask.cpp  EditableMask.hpp  ExifTransfer.cpp  ExifTransfer.hpp  FileSystem.cpp  FileSystem.hpp  Image.cpp  Image.hpp  ImageIO.cpp  ImageIO.hpp  ImageStack.cpp  ImageStack.hpp  Launcher.cpp  Launcher.hpp  LoadOptionsDialog.cpp  LoadOptionsDialog.hpp  LoadSaveOptions.hpp  MainWindow.cpp  MainWindow.hpp  PreviewWidget.cpp  PreviewWidget.hpp  RawParameters.cpp  RawParameters.hpp  TiffDirectory.hpp  config.h.in
test/: CMakeLists.txt  SampleImage.hpp  testArray2D.cpp  testBitmap.cpp  testBoxBlur.cpp  testDngFloatWriter.cpp  testEditableMask.cpp  testHistogram.cpp  testImageStack.cpp  testMain.cpp  testMergeMap.cpp  testRawExposureStack.cpp  time.hpp
